update package info

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "caproomster",
-  "description": "SOEN 344 Caproomster",
+  "name": "bc-commerce",
+  "description": "Bruce Cai Freelance",
   "authors": [
     "Zhipeng Bruce Cai <https://github.com/choitwao>"
   ],
