--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,9 @@
 dependencies:
   override:
     - npm config set registry http://registry.npmjs.org/
-    - cd client && npm run setup
-    - pip2 install -r requirements.txt
+    - npm run setup
 
 test:
   override:
-    - cd client && npm run test
-    - pytest
+    - npm run test
     - codecov
